<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ch.bedag.dap.hellodata</groupId>
        <artifactId>hello-data</artifactId>
        <version>develop-SNAPSHOT</version>
    </parent>

    <artifactId>hello-data-subsystems</artifactId>
    <version>develop-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>hello-data-superset</module>
        <module>hello-data-airflow</module>
        <module>hello-data-cloudbeaver</module>
        <module>hello-data-cloudbeaver-gateway</module>
        <module>hello-data-dbt-docs</module>
        <module>hello-data-monitoring-storage</module>
        <module>hello-data-cleanup-logs</module>
        <module>hello-data-jupyterhub-gateway</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
